--- a/webstore/src/main/webapp/WEB-INF/web.xml
+++ b/webstore/src/main/webapp/WEB-INF/web.xml
@@ -5,9 +5,13 @@
 	<servlet>
 		<servlet-name>DefaultServlet</servlet-name>
 		<servlet-class> org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/webcontext/DispatcherServlet-context.xml</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>DefaultServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/welcome</url-pattern>
 	</servlet-mapping>
 </web-app>
